--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -30,10 +30,15 @@ dist.jar=${dist.dir}/Pmember1.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.DateChooser.jar=C:\\Program Files\\NetBeans 8.2\\jdatechooser\\DateChooser.jar
+file.reference.JDatePicker-master.zip=C:\\Program Files\\NetBeans 8.2\\JDatePicker-master.zip
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${libs.MySQLDriver.classpath}
+    ${libs.MySQLDriver.classpath}:\
+    ${file.reference.JDatePicker-master.zip}:\
+    ${file.reference.DateChooser.jar}:\
+    ${libs.FlatDate.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
